homework/13_03/dep-mult-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-mn
  labels:
    app: multinginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multinginx
  template:
    metadata:
      labels:
        app: multinginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
          - name: html-nginx
            mountPath: /usr/share/nginx/html/
      - name: multitool
        image: wbitt/network-multitool
      volumes:
        - name: html-nginx
          configMap:
            name: nginx-page
