homework/13_03/svc-mult-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: multinginx-svc
spec:
  type: NodePort
  selector:
    app: multinginx
  ports:
  - name: nginx-http
    port: 80
    targetPort: 80
    nodePort: 31080
  - name: multitool-http
    port: 1180
  - name: multitool-https
    port: 11443
