homework/13_03/svc-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - name: nginx-https
    port: 443
    targetPort: 443
    nodePort: 31443
