homework/13_03/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  tls:
    - hosts:
        - ycloud.local
      secretName: nginx-secret
  ingressClassName: nginx
  rules:
  - http:
      host: ycloud.local
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 443
